// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parts extensionOf creates 1`] = `
Object {
  "attrs": Object {
    "className": "hs-item-extensions",
  },
  "children": Array [
    Object {
      "attrs": Object {
        "className": "hs-item-extends",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": "extends",
    },
    Object {
      "attrs": null,
      "children": Array [
        Object {
          "attrs": Object {
            "className": "hs-item-extension",
          },
          "children": Array [
            Object {
              "attrs": Object {
                "href": "#!/api/hsDocs/hsDocs.Site.SiteName",
                "oncreate": undefined,
                "onupdate": undefined,
              },
              "children": undefined,
              "dom": undefined,
              "domSize": undefined,
              "events": undefined,
              "instance": undefined,
              "key": undefined,
              "state": undefined,
              "tag": "a",
              "text": "id275",
            },
            Object {
              "attrs": undefined,
              "children": "",
              "dom": undefined,
              "domSize": undefined,
              "events": undefined,
              "instance": undefined,
              "key": undefined,
              "state": undefined,
              "tag": "#",
              "text": undefined,
            },
          ],
          "dom": undefined,
          "domSize": undefined,
          "events": undefined,
          "instance": undefined,
          "key": undefined,
          "state": undefined,
          "tag": "span",
          "text": undefined,
        },
      ],
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": undefined,
    },
  ],
  "dom": undefined,
  "domSize": undefined,
  "events": undefined,
  "instance": undefined,
  "key": undefined,
  "state": undefined,
  "tag": "span",
  "text": undefined,
}
`;

exports[`parts flags creates 1`] = `
Object {
  "attrs": Object {
    "className": "hs-item-flags",
  },
  "children": Array [
    Object {
      "attrs": Object {
        "className": "hs-item-export-flag",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": "export",
    },
    Object {
      "attrs": Object {
        "className": "hs-item-external-flag",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": "external",
    },
    Object {
      "attrs": Object {
        "className": "hs-item-public-flag",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": "public",
    },
    Object {
      "attrs": Object {
        "className": "hs-item-constructorProperty-flag",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": "constructorProperty",
    },
    Object {
      "attrs": Object {
        "className": "hs-item-abstract-flag",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": "abstract",
    },
    Object {
      "attrs": Object {
        "className": "hs-item-const-flag",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": "const",
    },
    Object {
      "attrs": Object {
        "className": "hs-item-static-flag",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": "static",
    },
    Object {
      "attrs": Object {
        "className": "hs-item-optional-flag",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": "optional",
    },
    Object {
      "attrs": Object {
        "className": "hs-item-unknown-flag",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": "isUndefined",
    },
  ],
  "dom": undefined,
  "domSize": undefined,
  "events": undefined,
  "instance": undefined,
  "key": undefined,
  "state": undefined,
  "tag": "span",
  "text": undefined,
}
`;

exports[`parts flags creates ignoring const 1`] = `
Object {
  "attrs": Object {
    "className": "hs-item-flags",
  },
  "children": Array [
    Object {
      "attrs": Object {
        "className": "hs-item-export-flag",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": "export",
    },
    Object {
      "attrs": Object {
        "className": "hs-item-external-flag",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": "external",
    },
    Object {
      "attrs": Object {
        "className": "hs-item-public-flag",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": "public",
    },
    Object {
      "attrs": Object {
        "className": "hs-item-constructorProperty-flag",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": "constructorProperty",
    },
    Object {
      "attrs": Object {
        "className": "hs-item-abstract-flag",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": "abstract",
    },
    Object {
      "attrs": Object {
        "className": "hs-item-ignore-flag",
      },
      "children": Array [],
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": undefined,
    },
    Object {
      "attrs": Object {
        "className": "hs-item-static-flag",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": "static",
    },
    Object {
      "attrs": Object {
        "className": "hs-item-optional-flag",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": "optional",
    },
    Object {
      "attrs": Object {
        "className": "hs-item-unknown-flag",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": "isUndefined",
    },
  ],
  "dom": undefined,
  "domSize": undefined,
  "events": undefined,
  "instance": undefined,
  "key": undefined,
  "state": undefined,
  "tag": "span",
  "text": undefined,
}
`;

exports[`parts flags creates ignoring export 1`] = `
Object {
  "attrs": Object {
    "className": "hs-item-flags",
  },
  "children": Array [
    Object {
      "attrs": Object {
        "className": "hs-item-ignore-flag",
      },
      "children": Array [],
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": undefined,
    },
    Object {
      "attrs": Object {
        "className": "hs-item-external-flag",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": "external",
    },
    Object {
      "attrs": Object {
        "className": "hs-item-public-flag",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": "public",
    },
    Object {
      "attrs": Object {
        "className": "hs-item-constructorProperty-flag",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": "constructorProperty",
    },
    Object {
      "attrs": Object {
        "className": "hs-item-abstract-flag",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": "abstract",
    },
    Object {
      "attrs": Object {
        "className": "hs-item-const-flag",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": "const",
    },
    Object {
      "attrs": Object {
        "className": "hs-item-static-flag",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": "static",
    },
    Object {
      "attrs": Object {
        "className": "hs-item-optional-flag",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": "optional",
    },
    Object {
      "attrs": Object {
        "className": "hs-item-unknown-flag",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": "isUndefined",
    },
  ],
  "dom": undefined,
  "domSize": undefined,
  "events": undefined,
  "instance": undefined,
  "key": undefined,
  "state": undefined,
  "tag": "span",
  "text": undefined,
}
`;

exports[`parts flags creates missing flags 1`] = `
Object {
  "attrs": Object {
    "className": "hs-item-flags",
  },
  "children": Array [],
  "dom": undefined,
  "domSize": undefined,
  "events": undefined,
  "instance": undefined,
  "key": undefined,
  "state": undefined,
  "tag": "span",
  "text": undefined,
}
`;

exports[`parts inheritedFrom creates 1`] = `
Object {
  "attrs": Object {
    "className": "hs-item-inherited-from",
  },
  "children": Array [
    Object {
      "attrs": null,
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": "inherited from ",
    },
    Object {
      "attrs": Object {
        "href": "#!/api/hsDocs/hsDocs.Site",
        "oncreate": undefined,
        "onupdate": undefined,
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "a",
      "text": "Site",
    },
  ],
  "dom": undefined,
  "domSize": undefined,
  "events": undefined,
  "instance": undefined,
  "key": undefined,
  "state": undefined,
  "tag": "span",
  "text": undefined,
}
`;

exports[`parts itemTooltip creates 1`] = `
Object {
  "attrs": Object {
    "className": "hs-item-name",
  },
  "children": Array [
    Object {
      "attrs": Object {
        "className": "hs-tooltip",
        "href": "#",
      },
      "children": Array [
        Object {
          "attrs": undefined,
          "children": "test",
          "dom": undefined,
          "domSize": undefined,
          "events": undefined,
          "instance": undefined,
          "key": undefined,
          "state": undefined,
          "tag": "#",
          "text": undefined,
        },
        Object {
          "attrs": Object {
            "className": "hs-tooltip-bottom",
          },
          "children": undefined,
          "dom": undefined,
          "domSize": undefined,
          "events": undefined,
          "instance": undefined,
          "key": undefined,
          "state": undefined,
          "tag": "span",
          "text": "class name and then some",
        },
      ],
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "div",
      "text": undefined,
    },
  ],
  "dom": undefined,
  "domSize": undefined,
  "events": undefined,
  "instance": undefined,
  "key": undefined,
  "state": undefined,
  "tag": "span",
  "text": undefined,
}
`;

exports[`parts type creates array 1`] = `
Object {
  "attrs": null,
  "children": Array [
    Object {
      "attrs": Object {
        "className": "hs-item-name",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": ":",
    },
    Object {
      "attrs": Object {
        "className": "hs-item-sig-type",
      },
      "children": Array [
        Object {
          "attrs": Object {
            "className": "hs-item-type-array",
          },
          "children": Array [
            Object {
              "attrs": undefined,
              "children": "Array<",
              "dom": undefined,
              "domSize": undefined,
              "events": undefined,
              "instance": undefined,
              "key": undefined,
              "state": undefined,
              "tag": "#",
              "text": undefined,
            },
            Object {
              "attrs": undefined,
              "children": "",
              "dom": undefined,
              "domSize": undefined,
              "events": undefined,
              "instance": undefined,
              "key": undefined,
              "state": undefined,
              "tag": "#",
              "text": undefined,
            },
            Object {
              "attrs": undefined,
              "children": ">",
              "dom": undefined,
              "domSize": undefined,
              "events": undefined,
              "instance": undefined,
              "key": undefined,
              "state": undefined,
              "tag": "#",
              "text": undefined,
            },
          ],
          "dom": undefined,
          "domSize": undefined,
          "events": undefined,
          "instance": undefined,
          "key": undefined,
          "state": undefined,
          "tag": "span",
          "text": undefined,
        },
      ],
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": undefined,
    },
    null,
  ],
  "dom": undefined,
  "domSize": undefined,
  "events": undefined,
  "instance": undefined,
  "key": undefined,
  "state": undefined,
  "tag": "span",
  "text": undefined,
}
`;

exports[`parts type creates default 1`] = `
Object {
  "attrs": null,
  "children": Array [
    Object {
      "attrs": Object {
        "className": "hs-item-name",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": ":",
    },
    Object {
      "attrs": Object {
        "className": "hs-item-sig-type",
      },
      "children": Array [
        Object {
          "attrs": Object {
            "className": "error",
          },
          "children": undefined,
          "dom": undefined,
          "domSize": undefined,
          "events": undefined,
          "instance": undefined,
          "key": undefined,
          "state": undefined,
          "tag": "span",
          "text": "bogus",
        },
      ],
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": undefined,
    },
    null,
  ],
  "dom": undefined,
  "domSize": undefined,
  "events": undefined,
  "instance": undefined,
  "key": undefined,
  "state": undefined,
  "tag": "span",
  "text": undefined,
}
`;

exports[`parts type creates instrinct 1`] = `
Object {
  "attrs": null,
  "children": Array [
    Object {
      "attrs": Object {
        "className": "hs-item-name",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": ":",
    },
    Object {
      "attrs": Object {
        "className": "hs-item-sig-type",
      },
      "children": Array [
        Object {
          "attrs": Object {
            "className": "hs-item-type-instrinct",
          },
          "children": Array [
            Object {
              "attrs": Object {
                "href": "#!/api/hsDocs/undefined",
                "oncreate": undefined,
                "onupdate": undefined,
              },
              "children": Array [
                null,
              ],
              "dom": undefined,
              "domSize": undefined,
              "events": undefined,
              "instance": undefined,
              "key": undefined,
              "state": undefined,
              "tag": "span",
              "text": undefined,
            },
          ],
          "dom": undefined,
          "domSize": undefined,
          "events": undefined,
          "instance": undefined,
          "key": undefined,
          "state": undefined,
          "tag": "span",
          "text": undefined,
        },
      ],
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": undefined,
    },
    null,
  ],
  "dom": undefined,
  "domSize": undefined,
  "events": undefined,
  "instance": undefined,
  "key": undefined,
  "state": undefined,
  "tag": "span",
  "text": undefined,
}
`;

exports[`parts type creates reference 1`] = `
Object {
  "attrs": null,
  "children": Array [
    Object {
      "attrs": Object {
        "className": "hs-item-name",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": ":",
    },
    Object {
      "attrs": Object {
        "className": "hs-item-sig-type",
      },
      "children": Array [
        Object {
          "attrs": Object {
            "className": "hs-item-type-reference",
          },
          "children": Array [
            Object {
              "attrs": Object {
                "href": "#!/api/hsDocs/hsDocs.view.MainExample.modules.hsdatab",
                "oncreate": undefined,
                "onupdate": undefined,
              },
              "children": undefined,
              "dom": undefined,
              "domSize": undefined,
              "events": undefined,
              "instance": undefined,
              "key": undefined,
              "state": undefined,
              "tag": "a",
              "text": "hsdatab",
            },
          ],
          "dom": undefined,
          "domSize": undefined,
          "events": undefined,
          "instance": undefined,
          "key": undefined,
          "state": undefined,
          "tag": "span",
          "text": undefined,
        },
      ],
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": undefined,
    },
    null,
  ],
  "dom": undefined,
  "domSize": undefined,
  "events": undefined,
  "instance": undefined,
  "key": undefined,
  "state": undefined,
  "tag": "span",
  "text": undefined,
}
`;

exports[`parts type creates reflection 1`] = `
Object {
  "attrs": null,
  "children": Array [
    Object {
      "attrs": Object {
        "className": "hs-item-name",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": ":",
    },
    Object {
      "attrs": Object {
        "className": "hs-item-sig-type",
      },
      "children": Array [
        Object {
          "attrs": Object {
            "className": "hs-item-type-reflection",
          },
          "children": Array [
            Object {
              "attrs": Object {
                "className": "hs-item-reflection",
              },
              "children": Array [
                Object {
                  "attrs": undefined,
                  "children": "{ ",
                  "dom": undefined,
                  "domSize": undefined,
                  "events": undefined,
                  "instance": undefined,
                  "key": undefined,
                  "state": undefined,
                  "tag": "#",
                  "text": undefined,
                },
                Object {
                  "attrs": undefined,
                  "children": " }",
                  "dom": undefined,
                  "domSize": undefined,
                  "events": undefined,
                  "instance": undefined,
                  "key": undefined,
                  "state": undefined,
                  "tag": "#",
                  "text": undefined,
                },
              ],
              "dom": undefined,
              "domSize": undefined,
              "events": undefined,
              "instance": undefined,
              "key": undefined,
              "state": undefined,
              "tag": "span",
              "text": undefined,
            },
          ],
          "dom": undefined,
          "domSize": undefined,
          "events": undefined,
          "instance": undefined,
          "key": undefined,
          "state": undefined,
          "tag": "span",
          "text": undefined,
        },
      ],
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": undefined,
    },
    null,
  ],
  "dom": undefined,
  "domSize": undefined,
  "events": undefined,
  "instance": undefined,
  "key": undefined,
  "state": undefined,
  "tag": "span",
  "text": undefined,
}
`;

exports[`parts type creates stringLiteral 1`] = `
Object {
  "attrs": null,
  "children": Array [
    Object {
      "attrs": Object {
        "className": "hs-item-name",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": ":",
    },
    Object {
      "attrs": Object {
        "className": "hs-item-sig-type",
      },
      "children": Array [
        Object {
          "attrs": Object {
            "className": "hs-item-type-string-literal",
          },
          "children": undefined,
          "dom": undefined,
          "domSize": undefined,
          "events": undefined,
          "instance": undefined,
          "key": undefined,
          "state": undefined,
          "tag": "span",
          "text": "stringLiteral",
        },
      ],
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": undefined,
    },
    null,
  ],
  "dom": undefined,
  "domSize": undefined,
  "events": undefined,
  "instance": undefined,
  "key": undefined,
  "state": undefined,
  "tag": "span",
  "text": undefined,
}
`;

exports[`parts type creates tuple 1`] = `
Object {
  "attrs": null,
  "children": Array [
    Object {
      "attrs": Object {
        "className": "hs-item-name",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": ":",
    },
    Object {
      "attrs": Object {
        "className": "hs-item-sig-type",
      },
      "children": Array [
        Object {
          "attrs": Object {
            "className": "hs-item-type-tuple",
          },
          "children": Array [
            Object {
              "attrs": undefined,
              "children": "[ ",
              "dom": undefined,
              "domSize": undefined,
              "events": undefined,
              "instance": undefined,
              "key": undefined,
              "state": undefined,
              "tag": "#",
              "text": undefined,
            },
            Object {
              "attrs": undefined,
              "children": Array [
                null,
                Object {
                  "attrs": undefined,
                  "children": "",
                  "dom": undefined,
                  "domSize": undefined,
                  "events": undefined,
                  "instance": undefined,
                  "key": undefined,
                  "state": undefined,
                  "tag": "#",
                  "text": undefined,
                },
              ],
              "dom": undefined,
              "domSize": undefined,
              "events": undefined,
              "instance": undefined,
              "key": undefined,
              "state": undefined,
              "tag": "[",
              "text": undefined,
            },
            Object {
              "attrs": undefined,
              "children": " ]",
              "dom": undefined,
              "domSize": undefined,
              "events": undefined,
              "instance": undefined,
              "key": undefined,
              "state": undefined,
              "tag": "#",
              "text": undefined,
            },
          ],
          "dom": undefined,
          "domSize": undefined,
          "events": undefined,
          "instance": undefined,
          "key": undefined,
          "state": undefined,
          "tag": "span",
          "text": undefined,
        },
      ],
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": undefined,
    },
    null,
  ],
  "dom": undefined,
  "domSize": undefined,
  "events": undefined,
  "instance": undefined,
  "key": undefined,
  "state": undefined,
  "tag": "span",
  "text": undefined,
}
`;

exports[`parts type creates union 1`] = `
Object {
  "attrs": null,
  "children": Array [
    Object {
      "attrs": Object {
        "className": "hs-item-name",
      },
      "children": undefined,
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": ":",
    },
    Object {
      "attrs": Object {
        "className": "hs-item-sig-type",
      },
      "children": Array [
        Object {
          "attrs": Object {
            "className": "hs-item-type-union",
          },
          "children": Array [],
          "dom": undefined,
          "domSize": undefined,
          "events": undefined,
          "instance": undefined,
          "key": undefined,
          "state": undefined,
          "tag": "span",
          "text": undefined,
        },
      ],
      "dom": undefined,
      "domSize": undefined,
      "events": undefined,
      "instance": undefined,
      "key": undefined,
      "state": undefined,
      "tag": "span",
      "text": undefined,
    },
    null,
  ],
  "dom": undefined,
  "domSize": undefined,
  "events": undefined,
  "instance": undefined,
  "key": undefined,
  "state": undefined,
  "tag": "span",
  "text": undefined,
}
`;
